welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:4: error: not found: value nums
	for (x<- 0 to nums.length-1) {
                      ^maxValue:20: error: not found: value num
	tri(num);
            ^