welcome.lessons.welcome.array.maxvalue.MaxValue.scala.code
def tri(t:Array[Int]) {
	var i,j,t:Int=0;

	for (x<- 0 to nums.length-1) {
		for (z<-0 to nums.length-1) {
			i=nums(x);
			j=nums(z+1);
			if (i>=j) {
				t=i;
				i=j;
				j=t;
			}
		}
	}
}

def maxValue(nums:Array[Int]): Int = {
	var y,i,j,t:Int=0;

	tri(num);
	return nums(nums.length-1)
}
